tests/failing/2-not_compile_time_str/main.af
str: @str

bar: (fmt: str!) {
    @write(fmt, @exit(0))
}
foo: (fmt: str) {
    bar(fmt)
}
main: () {
    foo("Hi\n")
}
